--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode=production",
+    "start": "webpack-cli serve --mode development"
   },
   "author": "",
   "license": "ISC",
